Fix desktop layout issues and override native styles

--- a/src/blocks/edumed_rankings/editor.scss
+++ b/src/blocks/edumed_rankings/editor.scss
@@ -206,6 +206,7 @@
 						font-weight: 700;
 						font-size: 16px;
 						line-height: 26px;
+						flex-shrink: 0;
 
 						@media screen and (max-width: 768px){
 							flex-shrink: 0;
@@ -215,10 +216,13 @@
 					&--title{
 						display: flex;
 						flex-direction: column;
+						flex-shrink: 1;
+						max-width: 530px;
 
 						@media screen and (max-width: 768px){
 							flex-shrink: 1;
 							padding-inline-end: 20px;
+							max-width: 100%;
 						}
 
 						h4{
@@ -294,6 +298,7 @@
 						font-weight: 400;
 						font-size: 16px;
 						line-height: 26px;
+						flex-shrink: 0;
 					}
 
 					&--button{
@@ -361,7 +366,7 @@
 					display: flex;
 					flex-direction: row;
 					align-items: center;
-					justify-content: center;
+					justify-content: space-around;
 					gap: 48px;
 
 					@media screen and (max-width: 768px){
@@ -381,6 +386,7 @@
 						line-height: 26px;
 						color: #6D57C3;
 						padding-block-end: 0;
+						padding-inline-start: 0 !important;
 
 						@media screen and (max-width: 768px){
 							flex-direction: row;
